aks/rabbitmq/test/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  namespace: otokoc-rabbitmq
  annotations:
    ingress.class: "nginx"    
    proxy-buffering: "on"
    proxy-buffer-size: "128k"
    proxy-buffers-number: "4"
spec:
  tls: 
  - hosts:
      - rabbitmq-test.otokoc.com.tr
    secretName: tls-otokoc
  ingressClassName: nginx
  rules:
  - host: rabbitmq-test.otokoc.com.tr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
